# PaymentBackend

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  postman_collection.json  pyproject.toml  render.yaml  requirements.txt
alembic/: env.py
alembic/versions/: 001_create_initial_schema.py
app/: __init__.py  main.py
app/api/v1/: events.py  health.py  reconciliation.py  transactions.py
app/core/: __init__.py  config.py  database.py  state_machine.py
app/models/: __init__.py  entities.py
app/repositories/: __init__.py  event_repository.py  merchant_repository.py  reconciliation_repository.py  transaction_repository.py
app/schemas/: __init__.py  common.py  event.py  reconciliation.py  transaction.py
app/services/: __init__.py  event_service.py  reconciliation_service.py  transaction_service.py
docs/: DATABASE_DESIGN.md  TESTING_GUIDE.md  schema.sql
scripts/: generate_sample_data.py  load_sample_data.py
tests/: conftest.py  test_events.py  test_health.py  test_reconciliation.py  test_transactions.py
